--- a/src/index.html
+++ b/src/index.html
@@ -28,31 +28,75 @@
 				</div>
 				<a class="titul__menu_number" href="">8(800) 550-50-03</a>
 			</nav>
-			
+
 			<div class="position-relative">
 				<div class="titul__title">Экоипотека — ипотека здорового человека!</div>
-			<div class="titul__subtitle"><span>Экоипотека — это рекордно низкая ставка 0,1% на весь срок!</span> Экоипотека экологична во всём — честный процент и неизменяющийся ежемесячный платёж! А из-за минимальной переплаты можно гасить её в любом комфортном режиме: досрочно или в течение всего срока.</div>
-			<button class="titul__btn">Рассчитать ипотеку</button>
-			<div class="titul__terms">
-				<div class="titul__terms_item">
-					<div class="titul__terms_item-img"><img src="./img/rocket.svg" alt="rocket"></div>
-					<div class="titul__terms_item-descr"><span>Ставка 0.1%</span><br> На весь срок</div>
+				<div class="titul__subtitle"><span>Экоипотека — это рекордно низкая ставка 0,1% на весь срок!</span> Экоипотека
+					экологична во всём — честный процент и неизменяющийся ежемесячный платёж! А из-за минимальной переплаты можно
+					гасить её в любом комфортном режиме: досрочно или в течение всего срока.</div>
+				<button class="titul__btn">Рассчитать ипотеку</button>
+				<div class="titul__terms">
+					<div class="titul__terms_item">
+						<div class="titul__terms_item-img"><img src="./img/rocket.svg" alt="rocket"></div>
+						<div class="titul__terms_item-descr"><span>Ставка 0.1%</span><br> На весь срок</div>
+					</div>
+					<div class="titul__terms_item">
+						<div class="titul__terms_item-img"><img src="./img/tabl.svg" alt="tabl"></div>
+						<div class="titul__terms_item-descr"><span>Переплата меньше на 99%</span><br> В сранении с обычной ипотекой
+						</div>
+					</div>
+					<div class="titul__terms_item">
+						<div class="titul__terms_item-img"><img src="./img/money.svg" alt="money"></div>
+						<div class="titul__terms_item-descr"><span>До 6 млн. руб.</span><br> Сумма кредита</div>
+					</div>
 				</div>
-				<div class="titul__terms_item">
-					<div class="titul__terms_item-img"><img src="./img/tabl.svg" alt="tabl"></div>
-					<div class="titul__terms_item-descr"><span>Переплата меньше на 99%</span><br> В сранении с обычной ипотекой</div>
-				</div>
-				<div class="titul__terms_item">
-					<div class="titul__terms_item-img"><img src="./img/money.svg" alt="money"></div>
-					<div class="titul__terms_item-descr"><span>До 6 млн. руб.</span><br> Сумма кредита</div>
-				</div>
+				<div class="titul__img"><img src="./img/titul__img.svg" alt="titul img"></div>
 			</div>
-			<div class="titul__img"><img src="./img/titul__img.svg" alt="titul img"></div>
-			</div>
-			
 		</div>
 	</section>
 
+	<section class="benefit">
+		<div class="container">
+			<div class="benefit__title">Очевидная выгода</div>
+			<div class="benefit__nav">
+				<ul class="nav">
+					<li class="nav-item">
+						<a class="nav-link active" href="#studia" role="tab" data-bs-toggle="tab">Студия</a>
+						<div class="tab-content">
+							<div role="tabpanel" class="tab-pane fade show active" id="studia">
+								<p> Cтудия </p>
+							</div>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#oneroom" role="tab" data-bs-toggle="tab">Oднакомнатная</a>
+						<div class="tab-content">
+							<div role="tabpanel" class="tab-pane fade show" id="oneroom">
+								<p> однакомнатная </p>
+							</div>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#tworoom" role="tab" data-bs-toggle="tab">Двухкомнатная</a>
+						<div class="tab-content">
+							<div role="tabpanel" class="tab-pane fade show" id="tworoom">
+								<p> Двухкомнатная </p>
+							</div>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#threeroom" role="tab" data-bs-toggle="tab">Трёхкомнатная</a>
+						<div class="tab-content">
+							<div role="tabpanel" class="tab-pane fade show" id="threeroom">
+								<p> Трёхкомнатная </p>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+
+		</div>
+	</section>
 
 
 	<!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
