--- a/src/index.html
+++ b/src/index.html
@@ -62,38 +62,47 @@
 				<ul class="nav">
 					<li class="nav-item">
 						<a class="nav-link active" href="#studia" role="tab" data-bs-toggle="tab">Студия</a>
-						<div class="tab-content">
-							<div role="tabpanel" class="tab-pane fade show active" id="studia">
-								<p> Cтудия </p>
-							</div>
-						</div>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#oneroom" role="tab" data-bs-toggle="tab">Oднакомнатная</a>
-						<div class="tab-content">
-							<div role="tabpanel" class="tab-pane fade show" id="oneroom">
-								<p> однакомнатная </p>
-							</div>
-						</div>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#tworoom" role="tab" data-bs-toggle="tab">Двухкомнатная</a>
-						<div class="tab-content">
-							<div role="tabpanel" class="tab-pane fade show" id="tworoom">
-								<p> Двухкомнатная </p>
-							</div>
-						</div>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#threeroom" role="tab" data-bs-toggle="tab">Трёхкомнатная</a>
-						<div class="tab-content">
-							<div role="tabpanel" class="tab-pane fade show" id="threeroom">
-								<p> Трёхкомнатная </p>
-							</div>
-						</div>
 					</li>
 				</ul>
+				<div class="tab-content">
+					<div role="tabpanel" class="tab-pane fade show active" id="studia">
+						<div class="mininformation">
+							<div class="mininformation__el">
+								<p>Стоимость <br><span>2 650 000 р</span></p>
+							</div>
+							<div class="mininformation__el d-flex ">
+								<a class="mininformation__el_img" href=""><img src="./img/Vector.svg" alt="project"></a>
+								<p>Площадь <br><span>21,93 кв.м.</span></p>
+							</div>
+							<div class="mininformation__el">
+								<p>Срок кредита <br><span>30 лет</span></p>
+							</div>
+						</div>
+					</div>
+
+					<div role="tabpanel" class="tab-pane fade show" id="oneroom">
+						<p> однакомнатная Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque illum tempore voluptatum
+							possimus dolor optio nisi amet iusto aut? Placeat eos exercitationem ad dignissimos similique quaerat
+							tempora mollitia voluptatum consectetur!</p>
+					</div>
+					<div role="tabpanel" class="tab-pane fade show" id="tworoom">
+						<p> Двухкомнатная </p>
+					</div>
+					<div role="tabpanel" class="tab-pane fade show" id="threeroom">
+						<p> Трёхкомнатная </p>
+					</div>
+				</div>
 			</div>
+		</div>
 
 		</div>
 	</section>
