--- a/src/index.html
+++ b/src/index.html
@@ -508,7 +508,32 @@
 				</div>
 			</div>
 		</div>
+		</div>
+	</section>
 
+	<section class="why">
+		<div class="container">
+			<div class="why__title">Очевидная выгода</div>
+			<div class="why__wrapper">
+				<div class="why__wrapper_card green">
+					<div class="why__wrapper_card-title">Платите меньше</div>
+					<div class="why__wrapper_card-subtitle">С «Экоипотекой» итоговая переплата будет в разы меньше, чем при стандартной ставке. И ежемесячный платёж тоже будет меньше, а значит и ваша жизнь становится проще и приятнее. На весь срок ипотеки!</div>
+				</div>
+				<div class="why__wrapper_card blue">
+					<div class="why__wrapper_card-title">Снимайте у себя</div>
+					<div class="why__wrapper_card-subtitle">С Экоипотекой платёж за студию составит от 8 тыс ₽ в месяц. А снимать такую же студию в Краснодаре стоит 10 — 12 тысяч. Выгода очевидна! А с «Экоипотекой» у вас останется своя квартира по окончанию срока.</div>
+				</div>
+				<div class="why__wrapper_card orange">
+					<div class="why__wrapper_card-title">Инфляция — за вас!</div>
+					<div class="why__wrapper_card-subtitle">Реальная инфляция в России 15% в год. Оформляя Экоипотеку, вы выплачиваете банку 0,1% в год за использование кредита. Рост цен влияет и на ваш платеж по ипотеке: чем выше цены, тем больше обесценивается ваш ежемесячный платеж. Через несколько лет эта сумма станет еще менее ощутимой для вас.</div>
+				</div>
+			
+				<div class="why__wrapper_card violet">
+					<div class="why__wrapper_card-title">Выгодное вложение</div>
+					<div class="why__wrapper_card-subtitle">По статистике за последние 3 года квартиры в Краснодаре дорожают на 40% в год. Покупая квартиру, вы не только сохраняете деньги, но и зарабатываете на росте цены. А в будущем вы легко и выгодно продадите её, ведь квартиры в районах с развитой инфраструктурой, всегда востребованы.</div>
+				</div>
+		
+			</div>
 		</div>
 	</section>
 
