--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 						<div class="titul__terms_item-descr"><span>До 6 млн. руб.</span><br> Сумма кредита</div>
 					</div>
 				</div>
-				<div class="titul__img"><img src="./img/titul__img.svg" alt="titul img"></div>
+		
 			</div>
 		</div>
 	</section>
@@ -537,7 +537,33 @@
 		</div>
 	</section>
 
+	<section class="cmc">
+		<div class="container">
+			<div class="wrapper">
+				<div class="wrapper__fon">
+					<div class="wrapper__fon_item">
+						<div class="wrapper__fon_item-title">Где бы вы хотели жить?</div>
+						<div class="wrapper__fon_item-descr">
+							<div class="wrapper__fon_item-descr-text">
+								В качестве бонуса,<span>мы собрали для вас более 40 000 квартир и домов</span> во всех районах Краснодара, на любой вкус и бюджет.
+								<br><br>
+								Своя квартира без первого взноса или только за материнский капитал с нами возможна.
+								<br><br>
+								Для вас мы подобрали топ 10 квартир Краснодара за ноябрь 2022 года с самыми низкими платежами по ипотеке.
+								<br><br>
+								Плати за своё меньше, чем за съёмное. А мы вам в этом поможем 😉
+							</div>
+							<button class="wrapper__fon_item-descr-btn">Получить подборку бесплатно по СМС</button>
+						</div>
+					</div>
+					<div class="wrapper__fon_gif">Место под гифку</div>
+				
 
+					
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
