--- a/src/index.html
+++ b/src/index.html
@@ -637,30 +637,36 @@
 
 	<section class="gmo">
 		<div class="container">
-			<div class="flat">
-				<div class="flat__title">Давайте подберём <br> вам квартиру мечты!</div>
-				<div class="flat__subtitle">Кол-во комнат</div>
-				<div class="flat__rooms">
-					<a href="#" class="flat__rooms_room">1</a>
-					<a href="#" class="flat__rooms_room">2</a>
-					<a href="#" class="flat__rooms_room">3</a>
-					<a href="#" class="flat__rooms_room">4</a>
+			<div class="row">
+				<div class="flat col-12 col-md-2">
+					<div class="flat__title">Давайте подберём <br> вам квартиру мечты!</div>
+					<div class="flat__subtitle">Кол-во комнат</div>
+					<div class="flat__rooms">
+						<a href="#" class="flat__rooms_room">1</a>
+						<a href="#" class="flat__rooms_room">2</a>
+						<a href="#" class="flat__rooms_room">3</a>
+						<a href="#" class="flat__rooms_room">4</a>
+					</div>
+					<div class="flat__price">Стоимость квартиры, млн. руб.</div>
+					<div class="flat__minmax">
+						<div class="flat__minmax_min">от <b>3.2</b>	  млн. руб.</div>
+						<div class="flat__minmax_max">до <b>5.4</b>  млн. руб.</div>
+					</div>
+					<div class="flat__scale"></div>
+					<div class="flat__term">Срок сдачи</div>
+					<div class="flat__years">
+						<div class="flat__years_year">Заселён</div>
+						<div class="flat__years_year">2022</div>
+						<div class="flat__years_year">2023</div>
+						<div class="flat__years_year">2024+</div>
+					</div>
+					<div class="flat__btn">Выбрать квартиру</div>
 				</div>
-				<div class="flat__price">Стоимость квартиры, млн. руб.</div>
-				<div class="flat__minmax">
-					<div class="flat__minmax_min">от <b>3.2</b>	  млн. руб.</div>
-					<div class="flat__minmax_max">до <b>5.4</b>  млн. руб.</div>
+				<div class="ecoimg col-12 offset-md-3 col-md-10">
+					<img src="./img/ecoimg.png" alt="ecoimg">
 				</div>
-				<div class="flat__scale"></div>
-				<div class="flat__term">Срок сдачи</div>
-				<div class="flat__years">
-					<div class="flat__years_year">Заселён</div>
-					<div class="flat__years_year">2022</div>
-					<div class="flat__years_year">2023</div>
-					<div class="flat__years_year">2024+</div>
-				</div>
-				<div class="flat__btn">Выбрать квартиру</div>
 			</div>
+			
 		</div>
 
 
