--- a/src/index.html
+++ b/src/index.html
@@ -676,6 +676,23 @@
 		</div>
 	</section>
 
+	<section class="foother">
+		<div class="container">
+			<nav class="titul__menu bot">
+				<div class="titul__menu_logo"><img src="./img/Logo.svg" alt="logo"></div>
+				<div class="titul__menu_links">
+					<ul class="titul__menu_links-order">
+						<li><a href="#">Примеры</a></li>
+						<li><a href="#">Почему Экоипотека</a></li>
+						<li><a href="#">Объекты</a> </li>
+						<li><a href="#">Подобрать квартиру</a></li>
+					</ul>
+				</div>
+				<a class="titul__menu_number" href="">8(800) 550-50-03</a>
+			</nav>
+			<div class="confid"><a href="#">Политика конфиденциальности</a></div>
+		</div>
+	</section>
 
 	<!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
