--- a/src/index.html
+++ b/src/index.html
@@ -84,9 +84,10 @@
 								обычную ипотеку? Давайте рассчитаем экоипотеку и сэкономим вам миллионы на покупке квартиры!</div>
 							<div class="form-group">
 								<div class="mb-3">
-									<input type="text" name="name" required class="form-control" id="recipient-name" placeholder="Ваше имя">
+									<input type="text" name="name" required class="form-control" id="recipient-name"
+										placeholder="Ваше имя">
 								</div>
-	
+
 							</div>
 							<div class="form-group">
 								<div class="mb-3">
@@ -102,7 +103,7 @@
 					<div class="col-12 col-md-6 think">
 						<div class="img"><img src="./img/think.png" alt="fanny"></div>
 					</div>
-				</div>			
+				</div>
 			</div>
 		</div>
 	</div>
@@ -240,29 +241,34 @@
 				<a class="titul__menu_number" href="">8(800) 550-50-03</a>
 			</nav>
 
-			<div class="position-relative">
-				<div class="titul__title">Экоипотека — ипотека здорового человека!</div>
-				<div class="titul__subtitle"><span>Экоипотека — это рекордно низкая ставка 0,1% на весь срок!</span> Экоипотека
-					экологична во всём — честный процент и неизменяющийся ежемесячный платёж! А из-за минимальной переплаты можно
-					гасить её в любом комфортном режиме: досрочно или в течение всего срока.</div>
-				<button class="titul__btn">Рассчитать ипотеку</button>
-				<div class="titul__terms">
-					<div class="titul__terms_item">
-						<div class="titul__terms_item-img"><img src="./img/rocket.svg" alt="rocket"></div>
-						<div class="titul__terms_item-descr"><span>Ставка 0.1%</span><br> На весь срок</div>
-					</div>
-					<div class="titul__terms_item">
-						<div class="titul__terms_item-img"><img src="./img/tabl.svg" alt="tabl"></div>
-						<div class="titul__terms_item-descr"><span>Переплата меньше на 99%</span><br> В сранении с обычной ипотекой
+			<div class="content">
+				<div class="content__wrapper">
+					<div class="content__wrapper_title">Экоипотека — ипотека здорового человека!</div>
+					<div class="content__wrapper_subtitle"><span>Экоипотека — это рекордно низкая ставка 0,1% на весь срок!</span>
+						Экоипотека
+						экологична во всём — честный процент и неизменяющийся ежемесячный платёж! А из-за минимальной переплаты
+						можно
+						гасить её в любом комфортном режиме: досрочно или в течение всего срока.</div>
+					<button class="content__wrapper_btn">Рассчитать ипотеку</button>
+					<div class="content__wrapper_terms">
+						<div class="content__wrapper_terms-item">
+							<div class="content__wrapper_terms-item-img"><img src="./img/rocket.svg" alt="rocket"></div>
+							<div class="content__wrapper_terms-item-descr"><span>Ставка 0.1%</span><br> На весь срок</div>
+						</div>
+						<div class="content__wrapper_terms-item">
+							<div class="content__wrapper_terms-item-img"><img src="./img/tabl.svg" alt="tabl"></div>
+							<div class="content__wrapper_terms-item-descr"><span>Переплата меньше на 99%</span><br> В сранении с обычной
+								ипотекой
+							</div>
+						</div>
+						<div class="content__wrapper_terms-item">
+							<div class="content__wrapper_terms-item-img"><img src="./img/money.svg" alt="money"></div>
+							<div class="content__wrapper_terms-item-descr"><span>До 6 млн. руб.</span><br> Сумма кредита</div>
 						</div>
 					</div>
-					<div class="titul__terms_item">
-						<div class="titul__terms_item-img"><img src="./img/money.svg" alt="money"></div>
-						<div class="titul__terms_item-descr"><span>До 6 млн. руб.</span><br> Сумма кредита</div>
-					</div>
 				</div>
-
 			</div>
+		
 		</div>
 	</section>
 
@@ -849,9 +855,6 @@
 					</div>
 					<div class="exam__text_btn">Проверить кредитную историю</div>
 				</div>
-				<div class="exam__img  col-12 col-md-6">
-					<img src="./img/exem.png" alt="exam">
-				</div>
 			</div>
 		</div>
 	</section>
@@ -915,6 +918,35 @@
 			<div class="confid"><a href="#">Политика конфиденциальности</a></div>
 		</div>
 	</section>
+
+	<!-- <section class="test">
+		<div class="container">
+			<div class="content">
+				<div class="content__Text">
+					<h1>agaregareg</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita similique minus iste provident quaerat,
+						nulla tempora vitae aliquam. Ipsum pariatur esse nesciunt voluptates harum autem alias veritatis beatae
+						dolores tempore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus accusantium
+						reprehenderit voluptas. Magnam ea ipsam similique a ducimus tempora iusto consectetur voluptate natus
+						nostrum eligendi dolores, qui et sed voluptatibus.
+						Error a atque, cupiditate itaque voluptate ipsam quia porro perferendis eos fugit nesciunt laudantium illum,
+						doloribus totam ullam tempora accusantium, neque similique voluptates illo? Dolore incidunt nostrum saepe
+						illo amet.
+						Adipisci quia cupiditate numquam corporis provident ratione saepe deserunt in itaque reprehenderit odio,
+						praesentium voluptas, est vitae perspiciatis ipsum veniam earum maxime officiis rerum, inventore tempore?
+						Soluta velit sit quod.
+						Officiis quo hic architecto perspiciatis at deleniti quis adipisci tenetur maxime voluptatem. Deleniti sint
+						consectetur dolorem illum expedita, est modi nobis, minima, in quisquam nam. Veniam ipsam quaerat iusto
+						amet!
+						Corporis tenetur, dolores dolore ipsam excepturi mollitia quod beatae explicabo, accusantium quo ad quisquam
+						modi aspernatur consectetur. Obcaecati ea deleniti harum sit facere ducimus commodi error porro labore!
+						Harum, cumque?</p>
+				</div>
+				<div class="img"><img src="./img/titul_img.png" alt=""></div>
+
+			</div>
+		</div>
+	</section> -->
 
 	<!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
