--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,10 @@
 
 <body>
 	<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog modal-lg">
-			<div class="modal-content ">
-				<div class="modal-header">
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
+		<div class="modal-dialog modal-dialog-centered justify-content-center modal-lg">
+			<div class="modal-content wid ">
+				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
+					aria-label="Close"></button>
 				<div class="modal-body m-auto">
 					<img src="./img/3-x.png" alt="3-x">
 				</div>
@@ -29,43 +28,36 @@
 	</div>
 
 	<div class="modal fade" id="request" tabindex="-1" aria-labelledby="requestLabel" aria-hidden="true">
-		<div class="modal-dialog">
+		<div class="modal-dialog modal-dialog-centered justify-content-center">
 			<div class="modal-content wid">
 				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
 					aria-label="Close"></button>
-				<div class="row">
-					<div class="col-12 col-md-6">
-						<div class="modal-body pad">
-							<form class="modaleco">
-								<div class="modaleco__title">Экоипотека 0.1%</div>
-								<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить по СМС топ 10 квартир,
-									а также проверить свою кредитную историю и получить экспертную консультацию бесплатно.</div>
-								<div class="form-group">
-									<div class="mb-3">
-										<input type="text" name="name" required class="form-control" id="recipient-name"
-											placeholder="Ваше имя">
-									</div>
+				<div class="d-flex">
+					<div class="modal-body pad">
+						<form class="modaleco">
+							<div class="modaleco__title">Экоипотека 0.1%</div>
+							<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить по СМС топ 10 квартир,
+								а также проверить свою кредитную историю и получить экспертную консультацию бесплатно.</div>
+							<div class="form-group">
+								<div class="mb-3">
+									<input type="text" name="name" required class="form-control" id="recipient-name"
+										placeholder="Ваше имя">
+								</div>
 
+							</div>
+							<div class="form-group">
+								<div class="mb-3">
+									<input type="phone" name="phone" required class="form-control" id="message-text"
+										placeholder="Ваш номер телефона"></input>
 								</div>
-								<div class="form-group">
-									<div class="mb-3">
-										<input type="phone" name="phone" required class="form-control" id="message-text"
-											placeholder="Ваш номер телефона"></input>
-									</div>
-								</div>
-								<button type="submit" class="btn">Отправить</button>
-								<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-										href="#">персональных данных</a></div>
-							</form>
-						</div>
+							</div>
+							<button type="submit" class="btn">Отправить</button>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
+									href="#">персональных данных</a></div>
+						</form>
 					</div>
-					<div class="col-12 col-md-6">
-						<div class="img"><img src="./img/fanny.png" alt="fanny"></div>
-					</div>
+					<div class="img"><img src="./img/fanny.png" alt="fanny"></div>
 				</div>
-
-
-
 			</div>
 		</div>
 	</div>
@@ -232,13 +224,13 @@
 				<div class="titul__menu_logo"><img src="./img/Logo.svg" alt="logo"></div>
 				<div class="titul__menu_links">
 					<ul class="titul__menu_links-order">
-						<li><a href="#">Примеры</a></li>
-						<li><a href="#">Почему Экоипотека</a></li>
-						<li><a href="#">Объекты</a> </li>
-						<li><a href="#">Подобрать квартиру</a></li>
+						<li><a href="#option">Примеры</a></li>
+						<li><a href="#whyeco">Почему Экоипотека</a></li>
+						<li><a href="#object">Объекты</a> </li>
+						<li><a href="#flat">Подобрать квартиру</a></li>
 					</ul>
 				</div>
-				<a class="titul__menu_number" href="">8(800) 550-50-03</a>
+				<a class="titul__menu_number" href="tel:+78005505003">8(800) 550-50-03</a>
 			</nav>
 
 			<div class="content">
@@ -257,7 +249,8 @@
 						</div>
 						<div class="content__wrapper_terms-item">
 							<div class="content__wrapper_terms-item-img"><img src="./img/tabl.svg" alt="tabl"></div>
-							<div class="content__wrapper_terms-item-descr"><span>Переплата меньше на 99%</span><br> В сранении с обычной
+							<div class="content__wrapper_terms-item-descr"><span>Переплата меньше на 99%</span><br> В сранении с
+								обычной
 								ипотекой
 							</div>
 						</div>
@@ -268,7 +261,7 @@
 					</div>
 				</div>
 			</div>
-		
+
 		</div>
 	</section>
 
@@ -276,7 +269,7 @@
 		<div class="container">
 			<div class="benefit__title">Очевидная выгода</div>
 			<div class="benefit__nav">
-				<ul class="nav">
+				<ul class="nav" id="option">
 					<li class="nav-item">
 						<a class="nav-link active" href="#studia" role="tab" data-bs-toggle="tab">Студия</a>
 					</li>
@@ -298,7 +291,13 @@
 							</div>
 							<div class="mininformation__el d-flex ">
 								<a data-bs-toggle="modal" data-bs-target="#exampleModal" class="mininformation__el_img"
-									href="#exampleModal"><img src="./img/Vector.svg" alt="project"></a>
+									href="#exampleModal">
+									<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M0 14V28H3.5H7V26.8525V25.7049L4.66475 25.6934L2.32377 25.6762L2.30656 21.5852L2.29508 17.5H5.82377H9.35246V18.0738V18.6475H10.5H11.6475V16.8975V15.1475H7H2.35246V8.75V2.35246H8.75H15.1475V4.07377V5.79508H14.5738H14V6.97131V8.14754H15.75H17.5V5.22131V2.29508L21.591 2.30656L25.6762 2.32377L25.6934 4.65902L25.7049 7H23.9549H22.2049V8.17623V9.35246H23.9549H25.7049V12.25V15.1475H21.6025H17.5V13.3975V11.6475L16.341 11.659L15.1762 11.6762L15.159 18.6877L15.1475 25.7049H12.8238H10.5V26.8525V28H14H17.5V22.75V17.5H22.75H28V8.75V1.90735e-06H14H0V14Z"
+											fill="#41B619" />
+									</svg>
+								</a>
 								<p>Площадь <br><span>21,93 кв.м.</span></p>
 							</div>
 							<div class="mininformation__el">
@@ -777,7 +776,7 @@
 
 	<section class="why">
 		<div class="container">
-			<div class="why__title">Очевидная выгода</div>
+			<div class="why__title" id="whyeco">Очевидная выгода</div>
 			<div class="why__wrapper">
 				<div class="why__wrapper_card green">
 					<div class="why__wrapper_card-title">Платите меньше</div>
@@ -813,12 +812,12 @@
 
 	<section class="cmc">
 		<div class="container">
-			<div class="wrapper">
-				<div class="wrapper__fon">
-					<div class="wrapper__fon_item">
-						<div class="wrapper__fon_item-title">Где бы вы хотели жить?</div>
-						<div class="wrapper__fon_item-descr">
-							<div class="wrapper__fon_item-descr-text">
+			<div class="impl" id="object">	
+				<div class="impl__fon">
+					<div class="impl__fon_item">
+						<div class="impl__fon_item-title">Где бы вы хотели жить?</div>
+						<div class="impl__fon_item-descr">
+							<div class="impl__fon_item-descr-text">
 								В качестве бонуса,<span>мы собрали для вас более 40 000 квартир и домов</span> во всех районах
 								Краснодара, на любой вкус и бюджет.
 								<br><br>
@@ -829,10 +828,10 @@
 								<br><br>
 								Плати за своё меньше, чем за съёмное. А мы вам в этом поможем 😉
 							</div>
-							<button class="wrapper__fon_item-descr-btn">Получить подборку бесплатно по СМС</button>
+							<button class="impl__fon_item-descr-btn">Получить подборку бесплатно по СМС</button>
 						</div>
 					</div>
-					<div class="wrapper__fon_gif">Место под гифку</div>
+					<div class="impl__fon_gif">Место под гифку</div>
 
 				</div>
 			</div>
@@ -861,7 +860,7 @@
 
 	<section class="gmo">
 		<div class="container">
-			<div class="row">
+			<div class="row" id="flat">
 				<div class="flat col-12 col-md-2">
 					<div class="flat__title">Давайте подберём <br> вам квартиру мечты!</div>
 					<div class="flat__subtitle">Кол-во комнат</div>
@@ -907,46 +906,17 @@
 				<div class="titul__menu_logo"><img src="./img/Logo.svg" alt="logo"></div>
 				<div class="titul__menu_links">
 					<ul class="titul__menu_links-order">
-						<li><a href="#">Примеры</a></li>
-						<li><a href="#">Почему Экоипотека</a></li>
-						<li><a href="#">Объекты</a> </li>
-						<li><a href="#">Подобрать квартиру</a></li>
+						<li><a href="#option">Примеры</a></li>
+						<li><a href="#whyeco">Почему Экоипотека</a></li>
+						<li><a href="#object">Объекты</a> </li>
+						<li><a href="#flat">Подобрать квартиру</a></li>
 					</ul>
 				</div>
-				<a class="titul__menu_number" href="">8(800) 550-50-03</a>
+				<a class="titul__menu_number" href="tel:+78005505003">8(800) 550-50-03</a>
 			</nav>
 			<div class="confid"><a href="#">Политика конфиденциальности</a></div>
 		</div>
 	</section>
-
-	<!-- <section class="test">
-		<div class="container">
-			<div class="content">
-				<div class="content__Text">
-					<h1>agaregareg</h1>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita similique minus iste provident quaerat,
-						nulla tempora vitae aliquam. Ipsum pariatur esse nesciunt voluptates harum autem alias veritatis beatae
-						dolores tempore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus accusantium
-						reprehenderit voluptas. Magnam ea ipsam similique a ducimus tempora iusto consectetur voluptate natus
-						nostrum eligendi dolores, qui et sed voluptatibus.
-						Error a atque, cupiditate itaque voluptate ipsam quia porro perferendis eos fugit nesciunt laudantium illum,
-						doloribus totam ullam tempora accusantium, neque similique voluptates illo? Dolore incidunt nostrum saepe
-						illo amet.
-						Adipisci quia cupiditate numquam corporis provident ratione saepe deserunt in itaque reprehenderit odio,
-						praesentium voluptas, est vitae perspiciatis ipsum veniam earum maxime officiis rerum, inventore tempore?
-						Soluta velit sit quod.
-						Officiis quo hic architecto perspiciatis at deleniti quis adipisci tenetur maxime voluptatem. Deleniti sint
-						consectetur dolorem illum expedita, est modi nobis, minima, in quisquam nam. Veniam ipsam quaerat iusto
-						amet!
-						Corporis tenetur, dolores dolore ipsam excepturi mollitia quod beatae explicabo, accusantium quo ad quisquam
-						modi aspernatur consectetur. Obcaecati ea deleniti harum sit facere ducimus commodi error porro labore!
-						Harum, cumque?</p>
-				</div>
-				<div class="img"><img src="./img/titul_img.png" alt=""></div>
-
-			</div>
-		</div>
-	</section> -->
 
 	<!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
