--- a/src/index.html
+++ b/src/index.html
@@ -867,25 +867,25 @@
 					<div class="flat__rooms">
 						<div class="flat__rooms_room">
 							<div class="form_radio_btn">
-								<input id="radio-1" type="radio" name="radio" value="1" checked>
+								<input id="radio-1" type="radio" name="radio-room" value="1" checked>
 								<label for="radio-1">1</label>
 							</div>
 						</div>
 						<div class="flat__rooms_room">
 							<div class="form_radio_btn">
-								<input id="radio-2" type="radio" name="radio" value="2">
+								<input id="radio-2" type="radio" name="radio-room" value="2">
 								<label for="radio-2">2</label>
 							</div>
 						</div>
 						<div class="flat__rooms_room">
 							<div class="form_radio_btn">
-								<input id="radio-3" type="radio" name="radio" value="3">
+								<input id="radio-3" type="radio" name="radio-room" value="3">
 								<label for="radio-3">3</label>
 							</div>
 						</div>
 						<div class="flat__rooms_room">
 							<div class="form_radio_btn">
-								<input id="radio-4" type="radio" name="radio" value="3">
+								<input id="radio-4" type="radio" name="radio-room" value="4">
 								<label for="radio-4">4</label>
 							</div>
 						</div>
@@ -916,16 +916,34 @@
 					<div class="flat__term">Срок сдачи</div>
 					<div class="flat__years">
 						<div class="flat__years_year">
-			
+							<div class="form_radio_btn-year">
+								<input id="radio-5" type="radio" name="radio" value="Заселен">
+								<label for="radio-5">Заселён</label>
+							</div>
 						</div>
 						<div class="flat__years_year">
-
+							<div class="form_radio_btn-year">
+								<input id="radio-6" type="radio" name="radio" value="2022">
+								<label for="radio-6">2022</label>
+							</div>
+						</div>
+						<div class="flat__years_year">
+							<div class="form_radio_btn-year">
+								<input id="radio-7" type="radio" name="radio" value="2023">
+								<label for="radio-7">2023</label>
+							</div>
+						</div>
+						<div class="flat__years_year">
+							<div class="form_radio_btn-year">
+								<input id="radio-8" type="radio" name="radio" value="2024+">
+								<label for="radio-8">2024+</label>
+							</div>
 						</div>
 					</div>
 
 					<div class="flat__btn">Выбрать квартиру</div>
 				</div>
-			
+
 			</div>
 			<div class="ecoimg col-12 offset-md-3 col-md-10">
 				<img src="./img/ecoimg.png" alt="ecoimg">
