--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap" rel="stylesheet">
-
+	<link rel="stylesheet" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" href="./css/style.min.css">
 	<title>ЭКОИПОТЕКА</title>
 </head>
@@ -420,7 +420,14 @@
 								<p>Стоимость <br><span>3 580 000 ₽</span></p>
 							</div>
 							<div class="mininformation__el d-flex ">
-								<a class="mininformation__el_img" href=""><img src="./img/Vector.svg" alt="project"></a>
+								<a data-bs-toggle="modal" data-bs-target="#exampleModal" class="mininformation__el_img"
+									href="#exampleModal">
+									<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M0 14V28H3.5H7V26.8525V25.7049L4.66475 25.6934L2.32377 25.6762L2.30656 21.5852L2.29508 17.5H5.82377H9.35246V18.0738V18.6475H10.5H11.6475V16.8975V15.1475H7H2.35246V8.75V2.35246H8.75H15.1475V4.07377V5.79508H14.5738H14V6.97131V8.14754H15.75H17.5V5.22131V2.29508L21.591 2.30656L25.6762 2.32377L25.6934 4.65902L25.7049 7H23.9549H22.2049V8.17623V9.35246H23.9549H25.7049V12.25V15.1475H21.6025H17.5V13.3975V11.6475L16.341 11.659L15.1762 11.6762L15.159 18.6877L15.1475 25.7049H12.8238H10.5V26.8525V28H14H17.5V22.75V17.5H22.75H28V8.75V1.90735e-06H14H0V14Z"
+											fill="#41B619" />
+									</svg>
+								</a>
 								<p>Площадь <br><span>35,27 кв.м.</span></p>
 							</div>
 							<div class="mininformation__el">
@@ -538,7 +545,14 @@
 								<p>Стоимость <br><span>5 267 680 ₽</span></p>
 							</div>
 							<div class="mininformation__el d-flex ">
-								<a class="mininformation__el_img" href=""><img src="./img/Vector.svg" alt="project"></a>
+								<a data-bs-toggle="modal" data-bs-target="#exampleModal" class="mininformation__el_img"
+									href="#exampleModal">
+									<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M0 14V28H3.5H7V26.8525V25.7049L4.66475 25.6934L2.32377 25.6762L2.30656 21.5852L2.29508 17.5H5.82377H9.35246V18.0738V18.6475H10.5H11.6475V16.8975V15.1475H7H2.35246V8.75V2.35246H8.75H15.1475V4.07377V5.79508H14.5738H14V6.97131V8.14754H15.75H17.5V5.22131V2.29508L21.591 2.30656L25.6762 2.32377L25.6934 4.65902L25.7049 7H23.9549H22.2049V8.17623V9.35246H23.9549H25.7049V12.25V15.1475H21.6025H17.5V13.3975V11.6475L16.341 11.659L15.1762 11.6762L15.159 18.6877L15.1475 25.7049H12.8238H10.5V26.8525V28H14H17.5V22.75V17.5H22.75H28V8.75V1.90735e-06H14H0V14Z"
+											fill="#41B619" />
+									</svg>
+								</a>
 								<p>Площадь <br><span>57,78 кв.м.</span></p>
 							</div>
 							<div class="mininformation__el">
@@ -657,7 +671,14 @@
 								<p>Стоимость <br><span>6 290 000 ₽</span></p>
 							</div>
 							<div class="mininformation__el d-flex ">
-								<a class="mininformation__el_img" href=""><img src="./img/Vector.svg" alt="project"></a>
+								<a data-bs-toggle="modal" data-bs-target="#exampleModal" class="mininformation__el_img"
+									href="#exampleModal">
+									<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path
+											d="M0 14V28H3.5H7V26.8525V25.7049L4.66475 25.6934L2.32377 25.6762L2.30656 21.5852L2.29508 17.5H5.82377H9.35246V18.0738V18.6475H10.5H11.6475V16.8975V15.1475H7H2.35246V8.75V2.35246H8.75H15.1475V4.07377V5.79508H14.5738H14V6.97131V8.14754H15.75H17.5V5.22131V2.29508L21.591 2.30656L25.6762 2.32377L25.6934 4.65902L25.7049 7H23.9549H22.2049V8.17623V9.35246H23.9549H25.7049V12.25V15.1475H21.6025H17.5V13.3975V11.6475L16.341 11.659L15.1762 11.6762L15.159 18.6877L15.1475 25.7049H12.8238H10.5V26.8525V28H14H17.5V22.75V17.5H22.75H28V8.75V1.90735e-06H14H0V14Z"
+											fill="#41B619" />
+									</svg>
+								</a>
 								<p>Площадь <br><span>76,71 кв.м.</span></p>
 							</div>
 							<div class="mininformation__el">
@@ -834,8 +855,8 @@
 						
 						</div>
 					</div>
-					<a class="impl__fon_gif" type="button" data-bs-toggle="modal" data-bs-target="#studia_room">Место под гифку</a>
 					
+					<div class="impl__fon_gif"><img src="./gif/НЕРИЭЛТ_ролик.gif" alt=""></div>
 
 				</div>
 			</div>
@@ -982,10 +1003,10 @@
 		</div>
 	</section>
 
-	<!-- <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+	<script src="./js/bootstrap.min.js"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
-	</script>
+	</script> -->
 	<script src="./js/script.js"></script>
 </body>
 
