--- a/src/index.html
+++ b/src/index.html
@@ -234,6 +234,7 @@
 			</nav>
 
 			<div class="content">
+				<img class="content__img" src="./img/wooman__titul.svg" alt="">
 				<div class="content__wrapper">
 					<div class="content__wrapper_title">Экоипотека — ипотека здорового человека!</div>
 					<div class="content__wrapper_subtitle"><span>Экоипотека — это рекордно низкая ставка 0,1% на весь срок!</span>
@@ -260,6 +261,7 @@
 							<div class="content__wrapper_terms-item-img"><img src="./img/money.svg" alt="money"></div>
 							<div class="content__wrapper_terms-item-descr"><span>До 6 млн. руб.</span><br> Сумма кредита</div>
 						</div>
+						
 					</div>
 				</div>
 			</div>
