--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
 			</nav>
 
 			<div class="content">
-				<img class="content__img" src="./img/wooman__titul.svg" alt="">
+				<img class="content__img" src="./img/titul.png" alt="titul">
 				<div class="content__wrapper">
 					<div class="content__wrapper_title">Экоипотека — ипотека здорового человека!</div>
 					<div class="content__wrapper_subtitle"><span>Экоипотека — это рекордно низкая ставка 0,1% на весь срок!</span>
@@ -364,6 +364,7 @@
 							</div>
 							<div class="eco col-12 col-md-6">
 								<div class="eco__card">
+									<img src="./img/list_2.png" alt="list" class="eco__card_img">
 									<div class="eco__card_title">Экоипотека</div>
 									<div class="eco__card_grid">
 										<div class="eco__card_grid-bl">
@@ -824,6 +825,7 @@
 				</div>
 
 				<div class="why__wrapper_card violet">
+					<img src="./img/super.png" alt="superwoomen" class="why__wrapper_img">
 					<div class="why__wrapper_card-title">Выгодное вложение</div>
 					<div class="why__wrapper_card-subtitle">По статистике за последние 3 года квартиры в Краснодаре дорожают на
 						40% в год. Покупая квартиру, вы не только сохраняете деньги, но и зарабатываете на росте цены. А в будущем
@@ -831,6 +833,7 @@
 					</div>
 				</div>
 			</div>
+			
 		</div>
 	</section>
 
@@ -838,6 +841,7 @@
 		<div class="container">
 			<div class="impl" id="object">
 				<div class="impl__fon">
+					<img src="./img/minilist.png" alt="litlelist" class="impl__fon_img">
 					<div class="impl__fon_item">
 						<div class="impl__fon_item-title">Где бы вы хотели жить?</div>
 						<div class="impl__fon_item-descr">
@@ -869,6 +873,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="exam__text col-12 col-md-6">
+					<img src="./img/examp.png" alt="exampl" class="exam__text_img">
 					<div class="exam__text_title">Осталось узнать, одобрят ли банки Вам ипотеку?</div>
 					<div class="exam__text_subtitle">
 						Прежде чем открыть экоипотеку, нужно проверить, не состоите ли вы в черном списке банков. У каждого банка
@@ -883,6 +888,7 @@
 						историю</a>
 
 				</div>
+			
 			</div>
 		</div>
 	</section>
@@ -971,12 +977,13 @@
 					</div>
 
 					<div class="flat__btn">Выбрать квартиру</div>
+					<img class="flat__img" src="./img/final.png" alt="final">
 				</div>
-
+				
 			</div>
-			<div class="ecoimg col-12 offset-md-3 col-md-10">
-				<img src="./img/ecoimg.png" alt="ecoimg">
-			</div>
+			
+		
+			
 		</div>
 	</section>
 
