--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,24 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<link rel="apple-touch-icon" sizes="57x57" href="./icons/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./icons/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./icons/favicon/android-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./icons/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./icons/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./icons/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./icons/favicon/android-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./icons/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./icons/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="./icons/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./icons/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap" rel="stylesheet">
@@ -261,7 +279,7 @@
 							<div class="content__wrapper_terms-item-img"><img src="./img/money.svg" alt="money"></div>
 							<div class="content__wrapper_terms-item-descr"><span>До 6 млн. руб.</span><br> Сумма кредита</div>
 						</div>
-						
+
 					</div>
 				</div>
 			</div>
@@ -833,7 +851,7 @@
 					</div>
 				</div>
 			</div>
-			
+
 		</div>
 	</section>
 
@@ -888,7 +906,7 @@
 						историю</a>
 
 				</div>
-			
+
 			</div>
 		</div>
 	</section>
@@ -979,11 +997,11 @@
 					<div class="flat__btn">Выбрать квартиру</div>
 					<img class="flat__img" src="./img/final.png" alt="final">
 				</div>
-				
+
 			</div>
-			
-		
-			
+
+
+
 		</div>
 	</section>
 
