--- a/src/index.html
+++ b/src/index.html
@@ -286,7 +286,7 @@
 
 		</div>
 	</section>
-
+<!-- 
 	<section class="benefit">
 		<div class="container">
 			<div class="benefit__title">Очевидная выгода</div>
@@ -1021,7 +1021,7 @@
 			</nav>
 			<div class="confid"><a href="#">Политика конфиденциальности</a></div>
 		</div>
-	</section>
+	</section> -->
 
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/script.js"></script>
