--- a/src/index.html
+++ b/src/index.html
@@ -268,13 +268,12 @@
 		</div>
 	</header>
 
-	
+
 
 	<section class="titul">
 		<div class="container">
 			<div class="content">
-				<img class="content__img" src="./img/titul.png" alt="titul">
-				<div class="content__wrapper">
+				<div class="d-flex flex-column">
 					<div class="content__wrapper_title">Экоипотека — ипотека здорового человека!</div>
 					<div class="content__wrapper_subtitle"><span>Экоипотека — это рекордно низкая ставка 0,1% на весь срок!</span>
 						Экоипотека
@@ -283,7 +282,6 @@
 						гасить её в любом комфортном режиме: досрочно или в течение всего срока.</div>
 					<a class="content__wrapper_btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Подать
 						заявку</a>
-
 					<div class="content__wrapper_terms">
 						<div class="content__wrapper_terms-item">
 							<div class="content__wrapper_terms-item-img"><img src="./img/rocket.svg" alt="rocket"></div>
@@ -300,8 +298,8 @@
 							<div class="content__wrapper_terms-item-img"><img src="./img/money.svg" alt="money"></div>
 							<div class="content__wrapper_terms-item-descr"><span>До 6 млн. руб.</span><br> Сумма кредита</div>
 						</div>
-
 					</div>
+					<img class="content__img" src="./img/titul.png" alt="titul">
 				</div>
 			</div>
 
