--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 			<div class="modal-content wid">
 				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
 					aria-label="Close"></button>
-				<div class="d-flex">
+				<div class="d-flex align-items-center justify-content-center">
 					<div class="modal-body pad">
 						<form class="modaleco">
 							<div class="modaleco__title">Экоипотека 0.1%</div>
