adaptiv titul final-tochno

--- a/src/index.html
+++ b/src/index.html
@@ -346,7 +346,7 @@
 							</div>
 						</div>
 
-						<div class="comparison row">
+						<div class="comparison row justify-content-between">
 							<div class="wrapper col-12 col-md-6">
 								<div class="wrapper__card">
 									<div class="wrapper__card_title">Обычная ипотека</div>
