--- a/src/index.html
+++ b/src/index.html
@@ -305,7 +305,9 @@
 
 		</div>
 	</section>
-	<!-- 
+
+	<div class="menu__overlay"></div>
+
 	<section class="benefit">
 		<div class="container">
 			<div class="benefit__title">Очевидная выгода</div>
@@ -346,8 +348,8 @@
 							</div>
 						</div>
 
-						<div class="comparison row justify-content-between">
-							<div class="wrapper col-12 col-md-6">
+						<div class="comprasion_wr">
+							<div class="wrapper">
 								<div class="wrapper__card">
 									<div class="wrapper__card_title">Обычная ипотека</div>
 									<div class="wrapper__card_grid">
@@ -399,9 +401,11 @@
 
 								</div>
 							</div>
-							<div class="eco col-12 col-md-6">
+
+							<div class="eco">
+								<img src="./img/list_2.png" alt="list" class="eco_img">
+
 								<div class="eco__card">
-									<img src="./img/list_2.png" alt="list" class="eco__card_img">
 									<div class="eco__card_title">Экоипотека</div>
 									<div class="eco__card_grid">
 										<div class="eco__card_grid-bl">
@@ -836,7 +840,7 @@
 		</div>
 		</div>
 	</section>
-
+	<!-- 
 	<section class="why">
 		<div class="container">
 			<div class="why__title" id="whyeco">Очевидная выгода</div>
