--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
 			<div class="modal-content modalthink">
 				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
 					aria-label="Close"></button>
-				<div class="d-flex">
+				<div class="d-flex miniwindow">
 					<div class="modal-body pad">
 						<form class="modaleco">
 							<div class="modaleco__title">Вы хотите переплатить</div>
