--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
 									href="#">персональных данных</a></div>
 						</form>
 					</div>
-					<div class="col-12 col-md-6 think">
+					<div class="think">
 						<div class="img"><img src="./img/think.png" alt="fanny"></div>
 					</div>
 				</div>
@@ -119,37 +119,35 @@
 	</div>
 
 	<div class="modal fade" id="one_room" tabindex="-1" aria-labelledby="tworoomLabel" aria-hidden="true">
-		<div class="modal-dialog">
+		<div class="modal-dialog modal-dialog-centered justify-content-center">
 			<div class="modal-content modalthink">
 				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
 					aria-label="Close"></button>
-				<div class="row">
-					<div class="col-12 col-md-6">
-						<div class="modal-body pad">
-							<form class="modaleco">
-								<div class="modaleco__title">Вы хотите переплатить</div>
-								<div class="modaleco__subtitle mb-4">Вы точно <b> хотите переплатить <br> 4 025 960 ₽ рублей</b> и взять
-									обычную ипотеку? Давайте рассчитаем экоипотеку и сэкономим вам миллионы на покупке квартиры!</div>
-								<div class="form-group">
-									<div class="mb-3">
-										<input type="text" name="name" required class="form-control" id="recipient-name"
-											placeholder="Ваше имя">
-									</div>
+				<div class="d-flex miniwindow">
+					<div class="modal-body pad">
+						<form class="modaleco">
+							<div class="modaleco__title">Вы хотите переплатить</div>
+							<div class="modaleco__subtitle mb-4">Вы точно <b> хотите переплатить <br> 4 025 960 ₽ рублей</b> и взять
+								обычную ипотеку? Давайте рассчитаем экоипотеку и сэкономим вам миллионы на покупке квартиры!</div>
+							<div class="form-group">
+								<div class="mb-3">
+									<input type="text" name="name" required class="form-control" id="recipient-name"
+										placeholder="Ваше имя">
+								</div>
 
+							</div>
+							<div class="form-group">
+								<div class="mb-3">
+									<input type="phone" name="phone" required class="form-control" id="message-text"
+										placeholder="Ваш номер телефона"></input>
 								</div>
-								<div class="form-group">
-									<div class="mb-3">
-										<input type="phone" name="phone" required class="form-control" id="message-text"
-											placeholder="Ваш номер телефона"></input>
-									</div>
-								</div>
-								<button type="submit" class="btn">Отправить</button>
-								<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-										href="#">персональных данных</a></div>
-							</form>
-						</div>
+							</div>
+							<button type="submit" class="btn">Отправить</button>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
+									href="#">персональных данных</a></div>
+						</form>
 					</div>
-					<div class="col-12 col-md-6 think">
+					<div class="think">
 						<div class="img"><img src="./img/think.png" alt="fanny"></div>
 					</div>
 				</div>
@@ -157,77 +155,74 @@
 		</div>
 	</div>
 
-	<div class="modal fade" id="two_room" tabindex="-1" aria-labelledby="tworoomLabel" aria-hidden="true">
-		<div class="modal-dialog">
+	<div class="modal fade"	id="two_room" tabindex="-1" 	aria-labelledby="tworoomLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered justify-content-center">
 			<div class="modal-content modalthink">
 				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
 					aria-label="Close"></button>
-				<div class="row">
-					<div class="col-12 col-md-6">
-						<div class="modal-body pad">
-							<form class="modaleco">
-								<div class="modaleco__title">Вы хотите переплатить</div>
-								<div class="modaleco__subtitle mb-4">Вы точно <b> хотите переплатить <br> 5 923 952 ₽ рублей</b> и взять
-									обычную ипотеку? Давайте рассчитаем экоипотеку и сэкономим вам миллионы на покупке квартиры!</div>
-								<div class="form-group">
-									<div class="mb-3">
-										<input type="text" name="name" required class="form-control" id="recipient-name"
-											placeholder="Ваше имя">
-									</div>
+				<div class="d-flex miniwindow">
+					<div class="modal-body pad">
+						<form class="modaleco">
+							<div class="modaleco__title">Вы хотите переплатить</div>
+							<div class="modaleco__subtitle mb-4">Вы точно <b> хотите переплатить <br> 5 923 952 ₽ рублей</b> и взять
+								обычную ипотеку? Давайте рассчитаем экоипотеку и сэкономим вам миллионы на покупке квартиры!</div>
+							<div class="form-group">
+								<div class="mb-3">
+									<input type="text" name="name" required class="form-control" id="recipient-name"
+										placeholder="Ваше имя">
+								</div>
 
+							</div>
+							<div class="form-group">
+								<div class="mb-3">
+									<input type="phone" name="phone" required class="form-control" id="message-text"
+										placeholder="Ваш номер телефона"></input>
 								</div>
-								<div class="form-group">
-									<div class="mb-3">
-										<input type="phone" name="phone" required class="form-control" id="message-text"
-											placeholder="Ваш номер телефона"></input>
-									</div>
-								</div>
-								<button type="submit" class="btn">Отправить</button>
-								<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-										href="#">персональных данных</a></div>
-							</form>
-						</div>
+							</div>
+							<button type="submit" class="btn">Отправить</button>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
+									href="#">персональных данных</a></div>
+						</form>
 					</div>
-					<div class="col-12 col-md-6 think">
+					<div class="think">
 						<div class="img"><img src="./img/think.png" alt="fanny"></div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	
 
-	<div class="modal fade" id="three_room" tabindex="-1" aria-labelledby="tworoomLabel" aria-hidden="true">
-		<div class="modal-dialog">
+	<div class="modal fade"	id="three_room" tabindex="-1" aria-labelledby="threeroomLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered justify-content-center">
 			<div class="modal-content modalthink">
 				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
 					aria-label="Close"></button>
-				<div class="row">
-					<div class="col-12 col-md-6">
-						<div class="modal-body pad">
-							<form class="modaleco">
-								<div class="modaleco__title">Вы хотите переплатить</div>
-								<div class="modaleco__subtitle mb-4">Вы точно <b> хотите переплатить <br> 7 073 500 ₽ рублей</b> и взять
-									обычную ипотеку? Давайте рассчитаем экоипотеку и сэкономим вам миллионы на покупке квартиры!</div>
-								<div class="form-group">
-									<div class="mb-3">
-										<input type="text" name="name" required class="form-control" id="recipient-name"
-											placeholder="Ваше имя">
-									</div>
+				<div class="d-flex miniwindow">
+					<div class="modal-body pad">
+						<form class="modaleco">
+							<div class="modaleco__title">Вы хотите переплатить</div>
+							<div class="modaleco__subtitle mb-4">Вы точно <b> хотите переплатить <br> 7 073 500 ₽ рублей</b> и взять
+								обычную ипотеку? Давайте рассчитаем экоипотеку и сэкономим вам миллионы на покупке квартиры!</div>
+							<div class="form-group">
+								<div class="mb-3">
+									<input type="text" name="name" required class="form-control" id="recipient-name"
+										placeholder="Ваше имя">
+								</div>
 
+							</div>
+							<div class="form-group">
+								<div class="mb-3">
+									<input type="phone" name="phone" required class="form-control" id="message-text"
+										placeholder="Ваш номер телефона"></input>
 								</div>
-								<div class="form-group">
-									<div class="mb-3">
-										<input type="phone" name="phone" required class="form-control" id="message-text"
-											placeholder="Ваш номер телефона"></input>
-									</div>
-								</div>
-								<button type="submit" class="btn">Отправить</button>
-								<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-										href="#">персональных данных</a></div>
-							</form>
-						</div>
+							</div>
+							<button type="submit" class="btn">Отправить</button>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
+									href="#">персональных данных</a></div>
+						</form>
 					</div>
-					<div class="col-12 col-md-6 think">
+					<div class="think">
 						<div class="img"><img src="./img/think.png" alt="fanny"></div>
 					</div>
 				</div>
@@ -317,13 +312,13 @@
 						<a class="nav-link active" href="#studia" role="tab" data-bs-toggle="tab">Студия</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#oneroom" role="tab" data-bs-toggle="tab">Oднакомнатная</a>
+						</span><a class="nav-link" href="#oneroom" role="tab" data-bs-toggle="tab">Oднакомнатная</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#tworoom" role="tab" data-bs-toggle="tab">Двухкомнатная</a>
+						</span><a class="nav-link" href="#tworoom" role="tab" data-bs-toggle="tab">Двухкомнатная</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#threeroom" role="tab" data-bs-toggle="tab">Трёхкомнатная</a>
+						</span><a class="nav-link" href="#threeroom" role="tab" data-bs-toggle="tab">Трёхкомнатная</a>
 					</li>
 				</ul>
 				<div class="tab-content">
@@ -479,8 +474,8 @@
 							</div>
 						</div>
 
-						<div class="comparison row">
-							<div class="wrapper col-12 col-md-6">
+						<div class="comprasion_wr">
+							<div class="wrapper">
 								<div class="wrapper__card">
 									<div class="wrapper__card_title">Обычная ипотека</div>
 									<div class="wrapper__card_grid">
@@ -531,7 +526,8 @@
 										заявку</a>
 								</div>
 							</div>
-							<div class="eco col-12 col-md-6">
+							<div class="eco">
+								<img src="./img/list_2.png" alt="list" class="eco_img">
 								<div class="eco__card">
 									<div class="eco__card_title">Экоипотека</div>
 									<div class="eco__card_grid">
@@ -604,8 +600,8 @@
 							</div>
 						</div>
 
-						<div class="comparison row">
-							<div class="wrapper col-12 col-md-6">
+						<div class="comprasion_wr">
+							<div class="wrapper">
 								<div class="wrapper__card">
 									<div class="wrapper__card_title">Обычная ипотека</div>
 									<div class="wrapper__card_grid">
@@ -656,7 +652,8 @@
 										заявку</a>
 								</div>
 							</div>
-							<div class="eco col-12 col-md-6">
+							<div class="eco">
+								<img src="./img/list_2.png" alt="list" class="eco_img">
 								<div class="eco__card">
 									<div class="eco__card_title">Экоипотека</div>
 									<div class="eco__card_grid">
@@ -730,8 +727,8 @@
 							</div>
 						</div>
 
-						<div class="comparison row">
-							<div class="wrapper col-12 col-md-6">
+						<div class="comprasion_wr">
+							<div class="wrapper">
 								<div class="wrapper__card">
 									<div class="wrapper__card_title">Обычная ипотека</div>
 									<div class="wrapper__card_grid">
@@ -782,7 +779,8 @@
 										заявку</a>
 								</div>
 							</div>
-							<div class="eco col-12 col-md-6">
+							<div class="eco">
+								<img src="./img/list_2.png" alt="list" class="eco_img">
 								<div class="eco__card">
 									<div class="eco__card_title">Экоипотека</div>
 									<div class="eco__card_grid">
