why adaptiv final-tochno

--- a/src/index.html
+++ b/src/index.html
@@ -932,7 +932,7 @@
 
 		</div>
 	</section>
-	<!-- 
+
 	<section class="cmc">
 		<div class="container">
 			<div class="impl" id="object">
@@ -958,13 +958,13 @@
 						</div>
 					</div>
 
-					<div class="impl__fon_gif"><img src="./gif/НЕРИЭЛТ_ролик.gif" alt=""></div>
+					<div class="impl__fon_gif"><img src="./gif/НЕРИЭЛТ_ролик (1).gif" alt="gif"></div>
 
 				</div>
 			</div>
 		</div>
 	</section>
-
+	<!-- 
 	<section class="exam">
 		<div class="container">
 			<div class="row">
