cmc adaptiv final

--- a/src/index.html
+++ b/src/index.html
@@ -956,9 +956,14 @@
 								data-bs-target="#request">Получить подборку бесплатно по СМС</a>
 
 						</div>
+						<a class="impl__fon_item-descr-btn grid" type="button" data-bs-toggle="modal"
+								data-bs-target="#request">Получить подборку бесплатно по СМС</a>
 					</div>
-
-					<div class="impl__fon_gif"><img src="./gif/НЕРИЭЛТ_ролик (1).gif" alt="gif"></div>
+			
+					<div class="impl__fon_gif">
+						<div class="impl__fon_item-title grid">Где бы вы хотели жить?</div>
+						<img src="./gif/НЕРИЭЛТ_ролик (1).gif" alt="gif">
+					</div>
 
 				</div>
 			</div>
