--- a/src/index.html
+++ b/src/index.html
@@ -846,10 +846,14 @@
 
 			<div id="carouselExampleIndicators" class="carousel slide">
 				<div class="carousel-indicators">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+						aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+						aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+						aria-label="Slide 3"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+						aria-label="Slide 4"></button>
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
@@ -865,8 +869,10 @@
 					<div class="carousel-item">
 						<div class="why__wrapper_card blue">
 							<div class="why__wrapper_card-title">Снимайте у себя</div>
-							<div class="why__wrapper_card-subtitle">С Экоипотекой платёж за студию составит от 8 тыс ₽ в месяц. А снимать
-								такую же студию в Краснодаре стоит 10 — 12 тысяч. Выгода очевидна! А с «Экоипотекой» у вас останется своя
+							<div class="why__wrapper_card-subtitle">С Экоипотекой платёж за студию составит от 8 тыс ₽ в месяц. А
+								снимать
+								такую же студию в Краснодаре стоит 10 — 12 тысяч. Выгода очевидна! А с «Экоипотекой» у вас останется
+								своя
 								квартира по окончанию срока.</div>
 						</div>
 						<img src="./icons/Key.svg" alt="key">
@@ -875,7 +881,8 @@
 						<div class="why__wrapper_card orange">
 							<div class="why__wrapper_card-title">Инфляция — за вас!</div>
 							<div class="why__wrapper_card-subtitle">Реальная инфляция в России 15% в год. Оформляя Экоипотеку, вы
-								выплачиваете банку 0,1% в год за использование кредита. Рост цен влияет и на ваш платеж по ипотеке: чем выше
+								выплачиваете банку 0,1% в год за использование кредита. Рост цен влияет и на ваш платеж по ипотеке: чем
+								выше
 								цены, тем больше обесценивается ваш ежемесячный платеж. Через несколько лет эта сумма станет еще менее
 								ощутимой для вас.</div>
 						</div>
@@ -884,9 +891,12 @@
 					<div class="carousel-item">
 						<div class="why__wrapper_card violet">
 							<div class="why__wrapper_card-title">Выгодное вложение</div>
-							<div class="why__wrapper_card-subtitle">По статистике за последние 3 года квартиры в Краснодаре дорожают на
-								40% в год. Покупая квартиру, вы не только сохраняете деньги, но и зарабатываете на росте цены. А в будущем
-								вы легко и выгодно продадите её, ведь квартиры в районах с развитой инфраструктурой, всегда востребованы.
+							<div class="why__wrapper_card-subtitle">По статистике за последние 3 года квартиры в Краснодаре дорожают
+								на
+								40% в год. Покупая квартиру, вы не только сохраняете деньги, но и зарабатываете на росте цены. А в
+								будущем
+								вы легко и выгодно продадите её, ведь квартиры в районах с развитой инфраструктурой, всегда
+								востребованы.
 							</div>
 						</div>
 						<img src="./icons/safe.svg" alt="save">
@@ -957,9 +967,9 @@
 
 						</div>
 						<a class="impl__fon_item-descr-btn grid" type="button" data-bs-toggle="modal"
-								data-bs-target="#request">Получить подборку бесплатно по СМС</a>
+							data-bs-target="#request">Получить подборку бесплатно по СМС</a>
 					</div>
-			
+
 					<div class="impl__fon_gif">
 						<div class="impl__fon_item-title grid">Где бы вы хотели жить?</div>
 						<img src="./gif/НЕРИЭЛТ_ролик (1).gif" alt="gif">
@@ -969,31 +979,35 @@
 			</div>
 		</div>
 	</section>
-	<!-- 
+
 	<section class="exam">
 		<div class="container">
-			<div class="row">
-				<div class="exam__text col-12 col-md-6">
-					<img src="./img/examp.png" alt="exampl" class="exam__text_img">
-					<div class="exam__text_title">Осталось узнать, одобрят ли банки Вам ипотеку?</div>
-					<div class="exam__text_subtitle">
+			<div class="exam__wrapper">
+				<div class="exam__wrapper_text ">
+					<div class="exam__wrapper_text-title">Осталось узнать, одобрят ли банки Вам ипотеку?</div>
+					<div class="exam__wrapper_text-subtitle">
 						Прежде чем открыть экоипотеку, нужно проверить, не состоите ли вы в черном списке банков. У каждого банка
 						существует черный список, нахождение в котором не позволит одобрить ипотеку. Это не приговор, ведь мы имеем
 						доступ к той же базе, что и другие банки.
-						<br><br>
+						<br>
 						Проверим ваш скоринг балл в течении 5 минут, а затем разработаем план и удалим вас из черного списка.
-						<br><br>
+						<br>
 						Пройдите анализ кредитной истории и получите бесплатную консультацию специалиста. Это бесплатно.
 					</div>
-					<a class="exam__text_btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Проверить кредитную
-						историю</a>
-
+					<a class="exam__wrapper_text-btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Проверить кредитную
+						историю
+					</a>
 				</div>
-
+				<div class="exam__wrapper_text-img">
+					<div class="exam__wrapper_text-title grid">Осталось узнать, одобрят ли банки Вам ипотеку?</div>
+					<img src="./img/exam.png" alt="exampl" >
+				</div>
+		
 			</div>
+
 		</div>
 	</section>
-
+	<!-- 
 	<section class="gmo">
 		<div class="container">
 			<div class="row" id="flat">
