--- a/src/index.html
+++ b/src/index.html
@@ -1007,7 +1007,7 @@
 
 		</div>
 	</section>
-	<!-- 
+
 	<section class="gmo">
 		<div class="container">
 			<div class="row" id="flat">
@@ -1091,14 +1091,13 @@
 						</div>
 					</div>
 
+					<div class="flat__gif">
+						<img src="./gif/belka_gif.gif" alt="gif">
+					</div>
 					<div class="flat__btn">Выбрать квартиру</div>
 					<img class="flat__img" src="./img/final.png" alt="final">
 				</div>
-
 			</div>
-
-
-
 		</div>
 	</section>
 
