--- a/src/index.html
+++ b/src/index.html
@@ -1045,7 +1045,7 @@
 					<div class="flat__range">
 						<div class="price-input">
 							<div class="field">
-								<span>от <input type="number" class="input-min" value="2.2" disabled>млн. руб.</input>
+								<span>от <input type="number" class="input-min" value="2.2" disabled>млн. руб.</input></span>
 
 							</div>
 
@@ -1097,10 +1097,11 @@
 					<div class="flat__btn">Выбрать квартиру</div>
 					<img class="flat__img" src="./img/final.png" alt="final">
 				</div>
+				<img class="mobailimg" src="./img/final.png" alt="final">
 			</div>
 		</div>
 	</section>
-
+<!-- 
 	<section class="foother">
 		<div class="container">
 			<nav class="titul__menu bot">
@@ -1117,7 +1118,7 @@
 			</nav>
 			<div class="confid"><a href="#">Политика конфиденциальности</a></div>
 		</div>
-	</section> -->
+	</section>  -->
 
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/script.js"></script>
