--- a/src/index.html
+++ b/src/index.html
@@ -1101,24 +1101,28 @@
 			</div>
 		</div>
 	</section>
-<!-- 
+
 	<section class="foother">
 		<div class="container">
-			<nav class="titul__menu bot">
-				<div class="titul__menu_logo"><img src="./img/Logo.svg" alt="logo"></div>
-				<div class="titul__menu_links">
-					<ul class="titul__menu_links-order">
+			<nav class="header__menu">
+				<div class="header__menu_logo"><img src="./img/Logo.svg" alt="logo"></div>
+				<div class="header__menu_links">
+					<ul class="header__menu_links-order">
 						<li><a href="#option">Примеры</a></li>
 						<li><a href="#whyeco">Почему Экоипотека</a></li>
 						<li><a href="#object">Объекты</a> </li>
 						<li><a href="#flat">Подобрать квартиру</a></li>
 					</ul>
+	
 				</div>
-				<a class="titul__menu_number" href="tel:+78005505003">8(800) 550-50-03</a>
+				<div class="d-flex align-items-center gap-3">
+					<a class="header__menu_number" href="tel:+78005505003">8(800) 550-50-03</a>
+				</div>
+			
 			</nav>
 			<div class="confid"><a href="#">Политика конфиденциальности</a></div>
 		</div>
-	</section>  -->
+	</section> 
 
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/script.js"></script>
