--- a/src/index.html
+++ b/src/index.html
@@ -899,7 +899,7 @@
 								востребованы.
 							</div>
 						</div>
-						<img src="./icons/safe.svg" alt="save">
+						<img src="./icons/save.png" alt="save">
 					</div>
 				</div>
 
