fix list beniefit

--- a/src/index.html
+++ b/src/index.html
@@ -398,7 +398,7 @@
 							</div>
 
 							<div class="eco">
-								<img src="./img/list_2.png" alt="list" class="eco_img">
+								<img src="./img/list2.png" alt="list" class="eco_img">
 
 								<div class="eco__card">
 									<div class="eco__card_title">Экоипотека</div>
@@ -527,7 +527,7 @@
 								</div>
 							</div>
 							<div class="eco">
-								<img src="./img/list_2.png" alt="list" class="eco_img">
+								<img src="./img/list2.png" alt="list" class="eco_img">
 								<div class="eco__card">
 									<div class="eco__card_title">Экоипотека</div>
 									<div class="eco__card_grid">
@@ -653,7 +653,7 @@
 								</div>
 							</div>
 							<div class="eco">
-								<img src="./img/list_2.png" alt="list" class="eco_img">
+								<img src="./img/list2.png" alt="list" class="eco_img">
 								<div class="eco__card">
 									<div class="eco__card_title">Экоипотека</div>
 									<div class="eco__card_grid">
@@ -780,7 +780,7 @@
 								</div>
 							</div>
 							<div class="eco">
-								<img src="./img/list_2.png" alt="list" class="eco_img">
+								<img src="./img/list2.png" alt="list" class="eco_img">
 								<div class="eco__card">
 									<div class="eco__card_title">Экоипотека</div>
 									<div class="eco__card_grid">
