--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,43 @@
 				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
 					aria-label="Close"></button>
 				<div class="modal-body m-auto">
-					<img src="./img/3-x.png" alt="3-x">
+					<img src="./img/Студия.jpeg.jpg" alt="3-x">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="oneModal" tabindex="-1" aria-labelledby="oneModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered justify-content-center modal-lg">
+			<div class="modal-content wid ">
+				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
+					aria-label="Close"></button>
+				<div class="modal-body m-auto">
+					<img src="./img/Однушка.jpeg.jpg" alt="3-x">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="twoModal" tabindex="-1" aria-labelledby="twoModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered justify-content-center modal-lg">
+			<div class="modal-content wid ">
+				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
+					aria-label="Close"></button>
+				<div class="modal-body m-auto">
+					<img src="./img/Двушка.jpeg.jpg" alt="3-x">
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="threeModal" tabindex="-1" aria-labelledby="threeModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered justify-content-center modal-lg">
+			<div class="modal-content wid ">
+				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
+					aria-label="Close"></button>
+				<div class="modal-body m-auto">
+					<img src="./img/Трёшка.jpeg" alt="3-x">
 				</div>
 			</div>
 		</div>
@@ -459,8 +495,8 @@
 								<p>Стоимость <br><span>3 580 000 ₽</span></p>
 							</div>
 							<div class="mininformation__el d-flex ">
-								<a data-bs-toggle="modal" data-bs-target="#exampleModal" class="mininformation__el_img"
-									href="#exampleModal">
+								<a data-bs-toggle="modal" data-bs-target="#oneModal" class="mininformation__el_img"
+									href="#oneModal">
 									<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path
 											d="M0 14V28H3.5H7V26.8525V25.7049L4.66475 25.6934L2.32377 25.6762L2.30656 21.5852L2.29508 17.5H5.82377H9.35246V18.0738V18.6475H10.5H11.6475V16.8975V15.1475H7H2.35246V8.75V2.35246H8.75H15.1475V4.07377V5.79508H14.5738H14V6.97131V8.14754H15.75H17.5V5.22131V2.29508L21.591 2.30656L25.6762 2.32377L25.6934 4.65902L25.7049 7H23.9549H22.2049V8.17623V9.35246H23.9549H25.7049V12.25V15.1475H21.6025H17.5V13.3975V11.6475L16.341 11.659L15.1762 11.6762L15.159 18.6877L15.1475 25.7049H12.8238H10.5V26.8525V28H14H17.5V22.75V17.5H22.75H28V8.75V1.90735e-06H14H0V14Z"
@@ -585,8 +621,8 @@
 								<p>Стоимость <br><span>5 267 680 ₽</span></p>
 							</div>
 							<div class="mininformation__el d-flex ">
-								<a data-bs-toggle="modal" data-bs-target="#exampleModal" class="mininformation__el_img"
-									href="#exampleModal">
+								<a data-bs-toggle="modal" data-bs-target="#twoModal" class="mininformation__el_img"
+									href="#twoModal">
 									<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path
 											d="M0 14V28H3.5H7V26.8525V25.7049L4.66475 25.6934L2.32377 25.6762L2.30656 21.5852L2.29508 17.5H5.82377H9.35246V18.0738V18.6475H10.5H11.6475V16.8975V15.1475H7H2.35246V8.75V2.35246H8.75H15.1475V4.07377V5.79508H14.5738H14V6.97131V8.14754H15.75H17.5V5.22131V2.29508L21.591 2.30656L25.6762 2.32377L25.6934 4.65902L25.7049 7H23.9549H22.2049V8.17623V9.35246H23.9549H25.7049V12.25V15.1475H21.6025H17.5V13.3975V11.6475L16.341 11.659L15.1762 11.6762L15.159 18.6877L15.1475 25.7049H12.8238H10.5V26.8525V28H14H17.5V22.75V17.5H22.75H28V8.75V1.90735e-06H14H0V14Z"
@@ -712,8 +748,8 @@
 								<p>Стоимость <br><span>6 290 000 ₽</span></p>
 							</div>
 							<div class="mininformation__el d-flex ">
-								<a data-bs-toggle="modal" data-bs-target="#exampleModal" class="mininformation__el_img"
-									href="#exampleModal">
+								<a data-bs-toggle="modal" data-bs-target="#threeModal" class="mininformation__el_img"
+									href="#threeModal">
 									<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path
 											d="M0 14V28H3.5H7V26.8525V25.7049L4.66475 25.6934L2.32377 25.6762L2.30656 21.5852L2.29508 17.5H5.82377H9.35246V18.0738V18.6475H10.5H11.6475V16.8975V15.1475H7H2.35246V8.75V2.35246H8.75H15.1475V4.07377V5.79508H14.5738H14V6.97131V8.14754H15.75H17.5V5.22131V2.29508L21.591 2.30656L25.6762 2.32377L25.6934 4.65902L25.7049 7H23.9549H22.2049V8.17623V9.35246H23.9549H25.7049V12.25V15.1475H21.6025H17.5V13.3975V11.6475L16.341 11.659L15.1762 11.6762L15.159 18.6877L15.1475 25.7049H12.8238H10.5V26.8525V28H14H17.5V22.75V17.5H22.75H28V8.75V1.90735e-06H14H0V14Z"
